# skychimp

./: README.md  env.sample  pyproject.toml
blog/: admin.py  models.py  services.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_count_views.py
customer/: apps.py  forms.py  models.py  services.py  urls.py  views.py
customer/migrations/: 0001_initial.py  0002_initial.py  0003_alter_customer_options.py  0004_alter_customer_options.py
mailing/: models.py
mailing/migrations/: 0001_initial.py
sending/: admin.py  apps.py  cron.py  forms.py  models.py  service.py  urls.py  views.py
sending/migrations/: 0001_initial.py  0002_initial.py  0003_remove_sending_end_sending_sending_next_run.py  0004_alter_sending_created_at.py  0005_remove_sending_start_sending_and_more.py  0006_alter_sending_start_sending_date_and_more.py  0007_alter_sending_start_sending_date.py  0008_alter_sending_start_sending_date_and_more.py  0009_alter_sending_options_and_more.py  0010_alter_sending_start_sending_date_and_more.py  0011_alter_sending_start_sending_date_and_more.py  0012_alter_sending_start_sending_date_and_more.py  0013_alter_sending_options_and_more.py  0014_alter_sending_start_sending_date_and_more.py  0015_alter_sending_start_sending_date_and_more.py  0016_alter_sending_start_sending_date_and_more.py  0017_alter_sending_start_sending_date_and_more.py  0018_alter_sending_start_sending_date_and_more.py
skychimp/: settings.py  urls.py
static/js/: bootstrap.bundle.js  (+2 more)
user/: admin.py  forms.py  mixin.py  models.py  services.py  urls.py  utils.py  views.py
(+33 files in other folders)
