[tool.poetry]
name = "coursework-6"
version = "0.1.0"
description = ""
authors = ["alexandr <dmitrymaslov2016@mai.ru>"]

packages = [{include = "coursework_6"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.1"
python-dotenv = "^1.0.0"
pip = "^23.1.2"
django-crontab = "^0.7.1"
pillow = "^10.0.0"
psycopg2-binary = "^2.9.6"
redis = "^4.6.0"
validate-email = "^1.3"
py3dns = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
